# product-discovery-ai

./: README.md  app_basic.py  pyproject.toml
src/product/: crew.py  main.py
src/product/config/: agents.yaml  tasks.yaml
src/product/tools/: reddit_tool.py  serper_tool.py
